Use nginx for serving static content in production

--- a/nginx-app.conf
+++ b/nginx-app.conf
@@ -17,10 +17,14 @@ server {
     # max upload size
     client_max_body_size 1M;   # adjust to taste
 
-    # Finally, send all non-media requests to the Flask server.
-    location / {
+    # Send all non-media requests to the Flask server.
+    location /api {
         uwsgi_pass  flask;
         include     /usr/src/app/uwsgi_params; # the uwsgi_params file you installed
     }
-}
 
+    location / {
+        index index.html;
+        root /usr/src/app/web_app;
+    }
+}
