--- a/nginx-app.conf
+++ b/nginx-app.conf
@@ -24,6 +24,10 @@ server {
     }
 
     location / {
+        gzip on;
+        gzip_types text/html text/css application/javascript;
+        gzip_min_length 1400;
+
         index index.html;
         root /usr/src/app/web_app;
     }
