--- a/nginx-app.conf
+++ b/nginx-app.conf
@@ -18,14 +18,14 @@ server {
     client_max_body_size 1M;   # adjust to taste
 
     # Send all non-media requests to the Flask server.
-    location /api {
+    location ~ (/$|/\?.*$|/about/$) {
         uwsgi_pass  flask;
         include     /usr/src/app/uwsgi_params; # the uwsgi_params file you installed
     }
 
     location / {
         gzip on;
-        gzip_types text/html text/css application/javascript;
+        gzip_types text/css application/javascript;
         gzip_min_length 1400;
 
         root /usr/src/app/web_app;
